# pyritas

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  environment.yml  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.py
.github/workflows/: ci.yml
_sources/: index.rst.txt
docs/source/: conf.py
notebooks/: r-tree.ipynb  sample_plotting.ipynb
src/ritas/: __init__.py  cli.py  io.py  main.py  polygons.py  utils.py  viz.py  workflows.py
src/ritas/app/: app.py
src/ritas/app/.streamlit/: config.toml
tests/: test_cli.py  test_polygons.py
tests/data/: square_100m.csv
